# law_tool_KOR

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  smithery.yaml
src/: law_tool.py  server.py
